syntax = "proto3";

option go_package = "./;protobufs";

package protobufs;

message SignedMsg {
    bytes data = 1;
    bytes signature = 2;
}

message Timeout {
    int32 sn = 1;
    int32 view = 2;
}

message Heartbeat {

}